fix svg squishing on mobile view

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,6 +65,26 @@ img {
     transform: scale(1.1);
 }
 
+/* SVG logo -------------------------------------- */
+
+@media only screen and (max-width: 768px) {
+    .g-txt {
+        transform: translateX(30px);
+    }
+    .pr-txt {
+        transform: translate(30px);
+    }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+    .g-txt {
+        transform: translateX(30px);
+    }
+    .pr-txt {
+        transform: translate(30px);
+    }
+}
+
 /* back to top button --------------------------- */
 
 #toTop {
